--- a/src/app/campaigns/edit-partner-campaigns/edit-partner-campaigns.component.css
+++ b/src/app/campaigns/edit-partner-campaigns/edit-partner-campaigns.component.css
@@ -22,6 +22,10 @@ fieldset {
     font-size: 14px;
 }
 
+.center{
+  text-align: center;
+}
+
 .portlet.light.dashboard-stat2.border-error{
 	border-color: red
 }
