--- a/src/styles.css
+++ b/src/styles.css
@@ -576,7 +576,7 @@ a .fa-trash {
 	font-weight: 500;
 }
 
-.center {
+.custom-center {
 	text-align: center;
 }
 
